--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  font-size: clamp(1rem, 1vw + 0.4rem, 5rem);
+}
+
 .text-preset-1 {
   font-family: "Poppins", sans-serif;
   font-size: 1.5rem;
